@@ -15,6 +15,7 @@ Cobbler CHANGELOG
 - (BUGF) fix for RHEL3 ppc imports
 - (FEAT) use nameserver variable in network config in Anaconda when set
 - (BUGF) sleep 5 seconds between power cycling systems
+- (FEAT) support for /usr/bin/cobbler-register
 
 - Tue Mar 3 2009 - 1.4.3
 - (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
